--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/bst/index.ts",
+    "test": "npx jest --watch --verbose",
     "ts:watch": "tsc --watch",
-    "ts:build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ts:build": "tsc"
   },
   "author": "",
   "license": "ISC",
