--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/bst/index.ts",
-    "test": "npx jest --watch --verbose",
+    "test": "npx jest --watch --verbose --coverage",
     "ts:watch": "tsc --watch",
     "ts:build": "tsc"
   },
